更新 search tabs icon

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,7 @@
 
 body {
     margin: 0;
-    font-family: 'Noto Sans TC', BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-        'Helvetica Neue', sans-serif;
+    font-family: 'Noto Sans TC' !important;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
