--- a/src/components/ProcessTask.scss
+++ b/src/components/ProcessTask.scss
@@ -2,27 +2,29 @@
     font-family: 'Microsoft JhengHei';
     list-style: none;
     font-size: 18px;
+
     li {
         display: flex;
+        color: black;
     }
     .node {
         // 圓形
-        width: 10px;
-        height: 10px;
+        width: 20px;
+        height:20px;
         border-radius: 50%;
         // border: #ff6d6d 2px solid;
         background-color: #ff6d6d;
-        margin-left: 2.5px;
+        
     }
     .doing-now {
         // 因為比原本的圓還大，為了保持置中，所以用margin-left控制位置
         // 公式為 width2-width1
-        width: 20px;
-        height: 20px;
+        width: 30px;
+        height: 30px;
         border-radius: 50%;
         background-color: #ffffff;
         border: #ff6d6d 2px solid;
-        margin-left: -4.5px;
+        margin-left: -5px;
 
         text-align: center;
     }
@@ -35,7 +37,7 @@
     }
     .title {
         // 行高要圓形直徑一樣
-        line-height: 10px;
+        line-height: 20px;
         margin-left: 1rem;
     }
 
@@ -46,9 +48,9 @@
 
     .divider {
         width: 1px;
-        height: 40px;
+        height: 50px;
         background-color: #ff6d6d;
-        // 半徑加1px
-        margin-left: 7px;
+        // width/2 + 1px
+        margin-left: 10px;
     }
 }
